--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>航院跳蚤市场</title>
 		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
-		<script type=”text/javascript”>
-		if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
-		window.location = “mobile.html”; 
-		}
-		</script>
+	    	<script type="text/javascript">  
+		    function browserRedirect() {  
+			var sUserAgent = navigator.userAgent.toLowerCase();  
+			var bIsIpad = sUserAgent.match(/ipad/i) == "ipad";  
+			var bIsIphoneOs = sUserAgent.match(/iphone os/i) == "iphone os";  
+			var bIsMidp = sUserAgent.match(/midp/i) == "midp";  
+			var bIsUc7 = sUserAgent.match(/rv:1.2.3.4/i) == "rv:1.2.3.4";  
+			var bIsUc = sUserAgent.match(/ucweb/i) == "ucweb";  
+			var bIsAndroid = sUserAgent.match(/android/i) == "android";  
+			var bIsCE = sUserAgent.match(/windows ce/i) == "windows ce";  
+			var bIsWM = sUserAgent.match(/windows mobile/i) == "windows mobile";  
+			if (bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM) {  
+			    window.location = “mobile.html”;  
+			};
+		    };  
+
+		    browserRedirect();  
+		</script>  
 		<link rel="stylesheet" type="text/css" href="css/index.css" />
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
 		<script type="text/javascript" src="js/jquery.min.js"></script>
