--- a/login.html
+++ b/login.html
@@ -3,6 +3,27 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>航院跳蚤市场</title>
+<script type="text/javascript">  
+        function browserRedirect() {  
+            var sUserAgent = navigator.userAgent.toLowerCase();  
+            var bIsIpad = sUserAgent.match(/ipad/i) == "ipad";  
+            var bIsIphoneOs = sUserAgent.match(/iphone os/i) == "iphone os";  
+            var bIsMidp = sUserAgent.match(/midp/i) == "midp";  
+            var bIsUc7 = sUserAgent.match(/rv:1.2.3.4/i) == "rv:1.2.3.4";  
+            var bIsUc = sUserAgent.match(/ucweb/i) == "ucweb";  
+            var bIsAndroid = sUserAgent.match(/android/i) == "android";  
+            var bIsCE = sUserAgent.match(/windows ce/i) == "windows ce";  
+            var bIsWM = sUserAgent.match(/windows mobile/i) == "windows mobile";  
+            document.writeln("您的浏览设备为：");  
+            if (bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM) {  
+                document.writeln("phone");  
+            } else {  
+                document.writeln("pc");  
+            }  
+        }  
+  
+        browserRedirect();  
+    </script> 
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
 		<script type="text/javascript" src="js/angular.min.js"></script>	
 		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
