--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			var bIsCE = sUserAgent.match(/windows ce/i) == "windows ce";  
 			var bIsWM = sUserAgent.match(/windows mobile/i) == "windows mobile";  
 			if (bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM) {  
-			    window.location = “mobile.html”;  
+			    window.location = "mobile.html";  
 			};
 		    };  
 
